--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,9 +15,8 @@
         <section class="steps">
             <h2 class="primary-title">Cash - Rapide - Rentable</h2>
 
-            <article class="step1">
-                <div>
-                    <img src="/images/etape1.png">
+            <article>
+                <div id="step1">
                     <h3>Etape 1</h3>
                     <p>Découvre la valeur de ton tèl</p>
                 </div>
@@ -29,19 +28,21 @@
                 <p>Si ton tèl est cassé, <a href="#" title="Lien vers l'estimation en ligne">fais une estimation en ligne</a></p>
             </article>
 
-            <article class="step2">
-                <img src="/images/etape2.png">
-                <h3>Etape 2</h3>
-                <p>Prends RDV et rejoins nous</p>
+            <article>
+                <div id="step2">
+                    <h3>Etape 2</h3>
+                    <p>Prends RDV et rejoins nous</p>
+                </div>
                 <a href="#" title="Lien vers les points de collecte" class="primary-button">Trouve les points de collecte</a>
             </article>
 
-            <article class="step3">
-                <img src="/images/etape3.png">
-                <img src="/images/pumpkin.png">
-                <h3>Etape 3</h3>
-                <p>Reçoit ton argent instantanément</p>
-                <a href="#" title="Lien vers l'application d'estimation" class="third-button">Télécharge l'appli Pumpkin</a>
+            <article>
+                <div id="step3">
+                    <img src="/images/pumpkin.png">
+                    <h3>Etape 3</h3>
+                    <p>Reçoit ton argent instantanément</p>
+                </div>
+                <a href="#" title="Lien vers l'application d'estimation" class="secondary-button">Télécharge l'appli Pumpkin</a>
             </article>
 
         </section>
