--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -2,7 +2,7 @@
 
 .home{
     h1{
-        font-size : 3.8rem;
+        font-size : 1.3rem;
         margin : 3% auto;
         text-align : center;
         text-transform : uppercase;
@@ -27,33 +27,36 @@
 /* STEPS */
     .steps {
 
-        img{
-            display : block;
-            margin : auto;
-            width : 75%;
-        }
-
-        .step1{
-            div{
-                position : relative;
-                margin-left : 3%;
+        article{
+            #step1{
+                background-image: url("/images/etape1.png");
+                background-position : center;
+                background-repeat: no-repeat;
+                width : 100%;
+                height : 45vh;
+                display : flex;
+                flex-direction : column;
+                justify-content: space-around;
+                align-items: center;
 
                 h3{
-                    position : absolute;
-                    left : 35%;
-                    top : 45%;
-                    font-size : 4rem;
+                    background-color : $third-color;
+                    width : 40%;
+                    height : 7vh;
+                    font-size : 1.3rem;
+                    font-weight: bold;
                     color : white;
+                    text-align : center;
+                    margin : 0 7% 0 0;
+                    padding : 3%;
                 }
 
                 p{
-                    position : absolute;
-                    left : 22%;
-                    top : 65%;
                     text-transform : uppercase;
-                    font-size : 2.5rem;
+                    font-size : 1rem;
                     text-align : center;
                     width : 50%;
+                    padding-right : 3%;
                 }
             }
 
@@ -63,8 +66,8 @@
                 margin-top : 5%;
 
                 img{
-                    width : 15%;
-                    margin : 3%;
+                    width : 13%;
+                    margin : 7% 4% 3% 4%;
                 }
             }
 
@@ -72,12 +75,100 @@
                 width : 50%;
                 margin : 3% auto;
                 text-align : center;
-                font-size : 2rem;
+                font-size : 1rem;
 
                 a{
                     text-decoration: underline;
                 }
             }
+
+            #step2{
+                background-image: url("/images/etape2.png");
+                background-position : center;
+                background-repeat: no-repeat;
+                width : 100%;
+                height : 50vh;
+                display : flex;
+                flex-direction : column;
+                justify-content: space-around;
+                align-items: center;
+                margin-top : 8%;
+
+                h3{
+                    background-color : $primary-color;
+                    width : 40%;
+                    height : 7vh;
+                    font-size : 1.3rem;
+                    font-weight: bold;
+                    color : white;
+                    text-align : center;
+                    margin : 0 7% 0 0;
+                    padding : 3%;
+                }
+
+                p{
+                    text-transform : uppercase;
+                    font-size : 1rem;
+                    text-align : center;
+                    width : 50%;
+                    padding-right : 3%;
+                }
+            }
+
+            #step3{
+                background-image: url("/images/etape3.png");
+                background-position : center;
+                background-repeat: no-repeat;
+                width : 100%;
+                height : 45vh;
+                display : flex;
+                flex-direction : column;
+                justify-content: space-around;
+                align-items: center;
+                margin-top : 15%;
+
+                h3{
+                    background-color : $secondary-color;
+                    width : 40%;
+                    height : 7vh;
+                    font-size : 1.3rem;
+                    font-weight: bold;
+                    color : white;
+                    text-align : center;
+                    margin : 0 7% 0 0;
+                    padding : 3%;
+                }
+
+                p{
+                    text-transform : uppercase;
+                    font-size : 1rem;
+                    text-align : center;
+                    width : 50%;
+                    padding-right : 3%;
+                }
+            }
+        }
+    }
+
+    .bail-bipbip{
+        a{
+            display : block;
+            text-align : center;
+            margin : 5%;
+            text-decoration: underline;
+        }
+    }
+
+    .home-partner{
+        h3{
+            font-size : 1.5rem;
+            color : $primary-color;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        img {
+            width : 25%;
         }
     }
 }
