--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,8 +16,12 @@
             <h2 class="primary-title">Cash - Rapide - Rentable</h2>
 
             <article>
-                <div id="step1">
-                    <h3>Etape 1</h3>
+                <div id="step1" class="ugly-divs">
+                    <img class="background-pic" src="/images/etape1.png" alt="c'est l'étape un ! ">
+                    <img src="/images/loupe.png" alt="La loupe !!">
+                    <div>
+                        <h3>Etape 1</h3>
+                    </div>
                     <p>Découvre la valeur de ton tèl</p>
                 </div>
                 <a href="#" title="Lien vers l'application d'estimation" class="third-button">Télécharge l'appli Bipbip</a>
@@ -30,10 +34,19 @@
 
             <article>
                 <div id="step2">
+                    <img src="/images/position-logo.png">
                     <h3>Etape 2</h3>
                     <p>Prends RDV et rejoins nous</p>
                 </div>
                 <a href="#" title="Lien vers les points de collecte" class="primary-button">Trouve les points de collecte</a>
+                <ul>
+                    <li>Dans ton école</li>
+                    <li>Dans ton entreprise</li>
+                    <li>Dans ta ville</li>
+                    <li>Au bipbip bus</li>
+                    <li>Tu en veux plus...</li>
+                </ul>
+                <a href="#" title="lien vers la page contact">Organise une collecte</a>
             </article>
 
             <article>
@@ -61,7 +74,7 @@
                 <img src="/images/jules-logo.png" alt=""/>
                 <img src="/images/yuka-logo.png" alt=""/>
             </article>
-            <a href="#" title="Lien vers la page partenaire" class="secondary-button">Rejoindre nos partenaires</a>
+            <a href="#" title="Lien vers la page partenaire" class="primary-button">Rejoindre nos partenaires</a>
         </section>
 
         <section class="contact">
