--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -28,22 +28,28 @@
     .steps {
 
         article{
-            .ugly-divs{
-                width : 300px;
-                height : 300px;
+            .step{
+                width : 380px;
+                height : 380px;
                 max-width: 100%;
-                margin : 5% 5%;
+                margin : 0 auto;
+                padding : 5% 0;
                 display : flex;
                 flex-flow : column wrap;
                 justify-content: space-around;
                 align-items: center;
                 position: relative;
+
                 .background-pic{
                     position: absolute;
                     width: 100%;
                     height: 100%;
                     top: 0;
                     left: 0;
+                }
+
+                .step-logo{
+                    margin-top : 20px;
                 }
 
                 div{
@@ -53,7 +59,7 @@
                     -o-transform:skew(-30deg);
                     transform:skew(-30deg);
                     padding : 10px 25px;
-                    margin-right: 27px;
+                    width : 200px;
                     h3{
                         font-size : 1.3rem;
                         font-weight: bold;
@@ -63,13 +69,11 @@
                     }
                 }
 
-
                 p{
                     text-transform : uppercase;
                     font-size : 1rem;
                     text-align : center;
-                    width : 50%;
-                    padding-right : 3%;
+                    padding-bottom : 35px;
                 }
             }
 
@@ -93,38 +97,11 @@
                     text-decoration: underline;
                 }
             }
-
+            
             #step2{
-                background-image: url("/images/etape2.png");
-                background-position : center;
-                background-repeat: no-repeat;
-                width : 100%;
-                height : 50vh;
-                display : flex;
-                flex-direction : column;
-                justify-content: space-around;
-                align-items: center;
-
-                h3{
-                    background-color : $primary-color;
-                    width : 40%;
-                    height : 7vh;
-                    font-size : 1.3rem;
-                    font-weight: bold;
-                    color : white;
-                    text-align : center;
-                    margin : 0 7% 0 0;
-                    padding : 3%;
+                div{
+                    background-color: $primary-color;
                 }
-
-                p{
-                    text-transform : uppercase;
-                    font-size : 1rem;
-                    text-align : center;
-                    width : 50%;
-                    padding-right : 3%;
-                }
-
             }
 
             ul{
@@ -133,37 +110,10 @@
                 line-height: 1.5em;
             }
 
-
-
-            #step3{
-                background-image: url("/images/etape3.png");
-                background-position : center;
-                background-repeat: no-repeat;
-                width : 100%;
-                height : 47vh;
-                display : flex;
-                flex-direction : column;
-                justify-content: space-around;
-                align-items: center;
-
-                h3{
-                    background-color : $secondary-color;
-                    width : 40%;
-                    height : 7vh;
-                    font-size : 1.3rem;
-                    font-weight: bold;
-                    color : white;
-                    text-align : center;
-                    margin : 0 7% 0 0;
-                    padding : 3%;
-                }
-
-                p{
-                    text-transform : uppercase;
-                    font-size : 1rem;
-                    text-align : center;
-                    width : 50%;
-                    padding-right : 3%;
+            p{
+                a{
+                    text-decoration: underline;
+                    text-align: center;
                 }
             }
         }
