--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,9 +16,9 @@
             <h2 class="primary-title">Cash - Rapide - Rentable</h2>
 
             <article>
-                <div id="step1" class="ugly-divs">
+                <div id="step1" class="step">
                     <img class="background-pic" src="/images/etape1.png" alt="c'est l'étape un ! ">
-                    <img src="/images/loupe.png" alt="La loupe !!">
+                    <img src="/images/loupe.png" alt="La loupe !!" class="step-logo">
                     <div>
                         <h3>Etape 1</h3>
                     </div>
@@ -33,9 +33,12 @@
             </article>
 
             <article>
-                <div id="step2">
-                    <img src="/images/position-logo.png">
-                    <h3>Etape 2</h3>
+                <div id="step2" class="step">
+                    <img class="background-pic" src="/images/etape2.png" alt="c'est l'étape deux ! ">
+                    <img src="/images/position-logo.png" class="step-logo">
+                    <div>
+                        <h3>Etape 2</h3>
+                    </div>
                     <p>Prends RDV et rejoins nous</p>
                 </div>
                 <a href="#" title="Lien vers les points de collecte" class="primary-button">Trouve les points de collecte</a>
@@ -46,13 +49,16 @@
                     <li>Au bipbip bus</li>
                     <li>Tu en veux plus...</li>
                 </ul>
-                <a href="#" title="lien vers la page contact">Organise une collecte</a>
+                <p><a href="#" title="lien vers la page contact">Organise une collecte</a></p>
             </article>
 
             <article>
-                <div id="step3">
-                    <img src="/images/pumpkin.png">
-                    <h3>Etape 3</h3>
+                <div id="step3" class="step">
+                    <img class="background-pic" src="/images/etape3.png" alt="c'est l'étape trois ! ">
+                    <img src="/images/pumpkin.png" class="step-logo">
+                    <div>
+                        <h3>Etape 3</h3>
+                    </div>
                     <p>Reçoit ton argent instantanément</p>
                 </div>
                 <a href="#" title="Lien vers l'application d'estimation" class="secondary-button">Télécharge l'appli Pumpkin</a>
