modification du logo bipbip dans le header

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -86,11 +86,12 @@ a{
 /* HEADER NAV */
 header{
     .logo-bipbip{
-        text-align : center;
-        margin : 0;
+        display : block;
+        width : 75%;
+        margin : auto;
 
         img{
-            width : 70%;
+            width : 100%;
         }
     }
 
