--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <p class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></p>
+            <a href="{{ path('home') }}" class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></a>
             <nav>
                 <div class="menu-burger">
                     <img src="/images/menu-burger.png" alt="menu burger" />
