faq debug avec la modif travis, sans JS

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -65,8 +65,8 @@ body{
 
 /* HEADER NAV */
 header{
-    .logo-bipbip{
-        text-align : center;
+    > img{
+        width: 100%;
     }
 
     nav{
