--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="https://use.typekit.net/xdq8cqe.css">
         {{ encore_entry_link_tags('app') }}
@@ -10,7 +11,7 @@
     </head>
     <body>
         <header>
-            <p class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></p>
+            <img src="/images/logo-bipbip.png" alt="logo bipbip" />
             <nav>
                 <div class="menu-burger">
                     <img src="/images/menu-burger.png" alt="menu burger" />
