--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -49,7 +49,8 @@
                 }
 
                 .step-logo{
-                    margin-top : 20px;
+                    margin-top : 30px;
+                    margin-right: 20px;
                 }
 
                 div{
@@ -60,6 +61,8 @@
                     transform:skew(-30deg);
                     padding : 10px 25px;
                     width : 200px;
+                    vertical-align: center;
+                    margin-right: 20px;
                     h3{
                         font-size : 1.3rem;
                         font-weight: bold;
@@ -73,7 +76,8 @@
                     text-transform : uppercase;
                     font-size : 1rem;
                     text-align : center;
-                    padding-bottom : 35px;
+                    padding-bottom : 75px;
+                    margin: 0 20px 0 0;
                 }
             }
 
@@ -116,6 +120,12 @@
                     text-align: center;
                 }
             }
+
+            #step3{
+                div{
+                    background-color: $secondary-color;
+                }
+            }
         }
     }
 
@@ -136,12 +146,15 @@
             color : $primary-color;
             text-align: center;
             font-weight: bold;
+            margin : 2% 8%;
         }
 
         article{
             display : flex;
             justify-content: space-around;
             flex-wrap : wrap;
+            margin-bottom : 6%;
+            margin-top : 6%;
             img {
                 width : 25%;
                 margin : 5%;
