Add 3 statics pages in HomeController : infos/bipbip, recute, cgu

--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -9,7 +9,7 @@
     {{ form_widget(form.firstname, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Prénom', 'label': 'Prénom', 'required': true}}) }}
     {{ form_widget(form.lastname, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom', 'label': 'Nom', 'required': true}}) }}
     {{ form_widget(form.email, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Email', 'label': 'Email', 'required': true}}) }}
-    {{ form_widget(form.phone, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Téléphone', 'label': 'Téléphone', 'required': true}}) }}
+    {{ form_widget(form.phone, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Truc', 'label': 'Téléphone', 'required': true}}) }}
     {{ form_widget(form.subject, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Objet du message', 'label': 'Objet du message', 'required': true}}) }}
     {{ form_widget(form.message, {'attr': {'class': 'form-control mt-3 mb-3', 'placeholder': 'Message', 'label': 'Message', 'required': true}}) }}
     {{ form_row(form.save, {'label': 'Envoyer le message', 'class': 'btn btn-validButton'}) }}
