Create a twig to generate mail, resolve subject issue, add the contact CSS

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -65,7 +65,7 @@
                     <div>
                         <h3>Etape 3</h3>
                     </div>
-                    <p>Reçoit ton argent instantanément</p>
+                    <p>Reçois ton argent instantanément</p>
                 </div>
                 <a href="#" title="Lien vers l'application d'estimation" class="secondary-button">Télécharge l'appli Pumpkin</a>
             </article>
@@ -90,7 +90,7 @@
 
         <section class="contact">
             <h2 class="primary-title">Contact</h2>
-            <a href="#" title="Lien vers la page contact">Contacte nous</a>
+            <a href="/contact" title="Lien vers la page contact">Contacte nous</a>
         </section>
     </main>
 {% endblock %}
