--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -163,4 +163,14 @@
             }
         }
     }
+
+    /* CONTACT */
+    .contact{
+        a{
+            display : block;
+            text-align : center;
+            margin : 5%;
+            text-decoration: underline;
+        }
+    }
 }
