--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -2,17 +2,5 @@
 {% block title %}Contacte-nous !{% endblock %}
 {% block body %}
     <h1 class="primary-title">Contacte-nous</h1>
-    <div class="container">
-    <div class="row">
-    <div class="col-12 mx-auto text-center form p-4">
-    {{ form_start(form, {'class': 'form-group'}) }}
-    {{ form_widget(form.firstname, {'attr': {'class': 'form-control-lg mt-3', 'placeholder': 'Prénom', 'label': 'Prénom', 'required': true}}) }}
-    {{ form_widget(form.lastname, {'attr': {'class': 'form-control-lg mt-3', 'placeholder': 'Nom', 'label': 'Nom', 'required': true}}) }}
-    {{ form_widget(form.email, {'attr': {'class': 'form-control-lg mt-3', 'placeholder': 'Email', 'label': 'Email', 'required': true}}) }}
-    {{ form_widget(form.phone, {'attr': {'class': 'form-control-lg mt-3', 'placeholder': 'Téléphone', 'label': 'Téléphone', 'required': true}}) }}
-    {{ form_widget(form.subject, {'attr': {'class': 'form-control-lg mt-3', 'placeholder': 'Objet du message', 'label': 'Objet du message', 'required': true}}) }}
-    {{ form_widget(form.message, {'attr': {'class': 'form-control-lg mt-3 mb-3', 'placeholder': 'Message', 'label': 'Message', 'required': true}}) }}
-    {{ form_row(form.save, {'label': 'Envoyer le message', 'class': 'btn btn-validButton'}) }}
-    {{ form_end(form) }}
-    </div></div></div>
+    {{ include('contact/_form.html.twig') }}
 {% endblock %}
