--- a/templates/organisms/show.html.twig
+++ b/templates/organisms/show.html.twig
@@ -11,7 +11,7 @@
     <main class="partnerPage">
 
 
-        <img src="{{ organism.logo }}" alt="logo yuka">
+        <img title="{{ organism.logo }}" src="{{ organism.logo }}" alt="{{ organism.logo }}">
 
         <p class="status">{{ organism.organismStatus }}</p>
 
