--- a/assets/scss/faq.scss
+++ b/assets/scss/faq.scss
@@ -2,56 +2,42 @@
 @import "~bootstrap/scss/bootstrap";
 
 // customize some Bootstrap variables
-$primary: darken(#428bca, 20%);
-
 // the ~ allows you to reference things in node_modules
-#faq{
-    width: 100%;
-    font-size: 1.1em;
+
+.menu-faq {
+  display : flex;
+  flex-direction : column;
+  justify-content : center;
+  margin: 10% 10% ;
+  max-width: 80%;
+  width: 80%;
+
 }
 
-.question, .question ul {
-    padding:0;
-    list-style:none;
-    width:100%;
+.question {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-size : 1.2rem;
+  padding: 20px;
+  border-radius: 5px;
+  background-color : $secondary-color;
+  opacity: 90%;
+  color : white;
 }
 
-.question li {
-    position: relative;
+.answer {
+  display : none;
+  background-color : rgba(243, 252, 251, 0.35);
+  opacity: 95%;
+  font-size : 1rem;
+  font-weight: 300;
+  border-radius: 2px;
+  padding: 20px;
+  width: 100%;
+  text-align: justify;
+  box-shadow: inset 2px 0px 10px rgba(150, 134, 134, 0.25);
 }
-
-.question a {
-    display:block;
-    text-decoration: none;
+.answer.displayed {
+  display: block;
 }
-
-.example-wrapper {
-    margin: 10% 10% ;
-    max-width: 80%;
-    width: 80%;
-}
-
-.card {
-    margin-left: 10%;
-    margin-right: 10%;
-}
-
-article.card-text {
-    position: absolute;
-    background-color : $secondary-color;
-    opacity: 95%;
-    border: 1px solid black;
-    list-style: type;
-    border-radius: 5px;
-    top: 25px;
-    left: 30%;
-    z-index: 1;
-    padding: 20px;
-    width: 100%;
-    display: none;
-}
-
-.question li:hover article.card-text {
-    display: block;
-}
-
