--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -95,57 +95,91 @@ header{
         }
     }
 
-    nav{
+    #menu{
+        display : none;
+        z-index : 3;
+        background : #FFFFFF;
+        padding : 4em 2em;
+        width : 100%;
+        height : 100%;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        #header-menu{
+            display : flex;
+            justify-content : space-around;
+            align-items : center;
+
+            .close-button{
+                width : 15%;
+            }
+        }
+    }
+
+    #menu.displayed{
+        display : block;
+    }
+
+    .circle-buttons{
         display : flex;
         justify-content: space-between;
+        z-index : 5;
 
-        .menu-burger{
+        #menu-burger{
             display : flex;
             flex-direction : column;
             justify-content : center;
             align-items: center;
             border-radius : 50%;
-            width : 8vw;
-            min-width: 70px;
-            height : 8vw;
-            min-height: 70px;
+            width : 10vw;
+            min-width : 150px;
+            max-width : 150px;
+            height : 10vw;
+            min-height: 150px;
+            max-height : 150px;
             background-color : $primary-color;
             position : fixed;
-            z-index : 9999;
             right : 5vw;
             bottom : 5vh;
+            z-index : 2;
 
             img{
-                width : 30%;
-                margin-bottom: 8%;
+                width : 35%;
+                margin-bottom : 2%;
+                z-index : 2;
             }
 
             p{
-                font-size : 0.8rem;
+                font-size : 1.6em;
                 color : white;
-                margin-bottom : 0;
+                margin-top : 2%;
+                z-index : 2;
             }
         }
 
-        .faq-button{
+        #faq-button{
             display : flex;
             justify-content : center;
             align-items : center;
             border-radius : 50%;
-            width : 8vw;
-            min-width: 70px;
-            height : 8vw;
-            min-height: 70px;
+            width : 10vw;
+            min-width : 150px;
+            max-width : 150px;
+            height : 10vw;
+            min-height: 150px;
+            max-height : 150px;
             background-color : black;
             position : fixed;
-            z-index : 9999;
             left : 5vw;
             bottom : 5vh;
+            z-index : 2;
 
             p{
                 color : white;
-                font-size : 0.8rem;
-                margin : 0;
+                font-size : 2em;
+                margin-bottom : 0;
             }
         }
     }
