--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,16 +11,29 @@
     </head>
     <body>
         <header>
-            <a href="{{ path('home') }}" class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></a>
-            <nav>
-                <div class="menu-burger">
+            <nav id="menu">
+                <div id="header-menu">
+                    <a href="{{ path('home') }}" class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></a>
+                    <img src="/images/close-button.png" alt="Fermer le menu" class="close-button"/>
+                </div>
+                <ul>
+                    <li class="primary-title"><a href="#" title="Accueil">Accueil</a></li>
+                    <li class="primary-title"><a href="#" title="Qui sommes-nous ?">Qui sommes-nous ?</a></li>
+                    <li class="primary-title"><a href="#" title="Nos partenaires">Nos partenaires</a></li>
+                    <li class="primary-title"><a href="#" title="Nous contacter">Contact</a></li>
+                    <li class="primary-title"><a href="#" title="Estime ton mobile">Estime ton mobile</a></li>
+                </ul>
+            </nav>
+            <p class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></p>
+            <div class="circle-buttons">
+                <div id="menu-burger">
                     <img src="/images/menu-burger.png" alt="menu burger" />
                     <p>Menu</p>
                 </div>
-                <div class="faq-button">
+                <div id="faq-button">
                     <p>FAQ</p>
                 </div>
-            </nav>
+            </div>
         </header>
 
         {% block body %}
