resolve issue about path for contact from homepage

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -90,7 +90,7 @@
 
         <section class="contact">
             <h2 class="primary-title">Contact</h2>
-            <a href="/contact" title="Lien vers la page contact">Contacte nous</a>
+            <a href="{{ path('add_message') }}" title="Lien vers la page contact">Contacte nous</a>
         </section>
     </main>
 {% endblock %}
