--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -97,7 +97,7 @@ header{
 
     #menu{
         display : none;
-        z-index : 3;
+        z-index : 9999;
         background : #FFFFFF;
         padding : 4em 2em;
         width : 100%;
@@ -125,7 +125,6 @@ header{
     .circle-buttons{
         display : flex;
         justify-content: space-between;
-        z-index : 5;
 
         #menu-burger{
             display : flex;
@@ -133,29 +132,25 @@ header{
             justify-content : center;
             align-items: center;
             border-radius : 50%;
-            width : 10vw;
-            min-width : 150px;
-            max-width : 150px;
-            height : 10vw;
-            min-height: 150px;
-            max-height : 150px;
+            width : 8vw;
+            min-width : 70px;
+            height : 8vw;
+            min-height: 70px;
             background-color : $primary-color;
             position : fixed;
             right : 5vw;
             bottom : 5vh;
-            z-index : 2;
+            z-index : 5;
 
             img{
-                width : 35%;
-                margin-bottom : 2%;
-                z-index : 2;
+                width : 30%;
+                margin-bottom : 8%;
             }
 
             p{
-                font-size : 1.6em;
+                font-size : 0.8rem;
                 color : white;
-                margin-top : 2%;
-                z-index : 2;
+                margin-bottom : 0;
             }
         }
 
@@ -164,21 +159,19 @@ header{
             justify-content : center;
             align-items : center;
             border-radius : 50%;
-            width : 10vw;
-            min-width : 150px;
-            max-width : 150px;
-            height : 10vw;
-            min-height: 150px;
-            max-height : 150px;
+            width : 8vw;
+            min-width : 70px;
+            height : 8vw;
+            min-height: 70px;
             background-color : black;
             position : fixed;
             left : 5vw;
             bottom : 5vh;
-            z-index : 2;
+            z-index : 5;
 
             p{
                 color : white;
-                font-size : 2em;
+                font-size : 0.8rem;
                 margin-bottom : 0;
             }
         }
