Ajout d'une classe pour les liens du menu, pour rectifier la flèche bleue after, changement dans le css correspondant.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,11 +17,11 @@
                     <img src="/images/close-button.png" alt="Fermer le menu" class="close-button"/>
                 </div>
                 <ul>
-                    <li class="primary-title"><a href="#" title="Accueil">Accueil</a></li>
-                    <li class="primary-title"><a href="#" title="Qui sommes-nous ?">Qui sommes-nous ?</a></li>
-                    <li class="primary-title"><a href="#" title="Nos partenaires">Nos partenaires</a></li>
-                    <li class="primary-title"><a href="#" title="Nous contacter">Contact</a></li>
-                    <li class="primary-title"><a href="#" title="Estime ton mobile">Estime ton mobile</a></li>
+                    <li class="primary-title primary-title-menu"><a href="#" title="Accueil">Accueil</a></li>
+                    <li class="primary-title primary-title-menu"><a href="#" title="Qui sommes-nous ?">Qui sommes-nous ?</a></li>
+                    <li class="primary-title primary-title-menu"><a href="#" title="Nos partenaires">Nos partenaires</a></li>
+                    <li class="primary-title primary-title-menu"><a href="#" title="Nous contacter">Contact</a></li>
+                    <li class="primary-title primary-title-menu"><a href="#" title="Estime ton mobile">Estime ton mobile</a></li>
                 </ul>
             </nav>
             <p class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></p>
