--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -59,7 +59,7 @@ a{
     position : relative;
     text-transform : uppercase;
     font-size : 1rem;
-    font-weight: bold;
+    font-weight: 500;
     color : $secondary-color;
     text-align : center;
     padding : 2%;
@@ -99,7 +99,7 @@ header{
         display : none;
         z-index : 9999;
         background : #FFFFFF;
-        padding : 4em 2em;
+        padding : 3em 2em;
         width : 100%;
         height : 100%;
         position: fixed;
@@ -114,6 +114,17 @@ header{
 
             .close-button{
                 width : 15%;
+            }
+        }
+
+        ul{
+            .primary-title-menu{
+                &:after{
+                    left : 32%;
+                }
+                a{
+                    color : $secondary-color;
+                }
             }
         }
     }
