Insertion des liens existants dans le menu ainsi que sur le bouton FAQ

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -180,7 +180,7 @@ header{
             bottom : 5vh;
             z-index : 5;
 
-            p{
+            a{
                 color : white;
                 font-size : 0.8rem;
                 margin-bottom : 0;
