--- a/assets/scss/partnerList.scss
+++ b/assets/scss/partnerList.scss
@@ -6,19 +6,31 @@
         justify-content : space-around;
         flex-wrap: wrap;
 
-        .logo{
-            width: 10%;
+        article {
+            margin: 10px;
 
-            img{
-                width :100px;
-                margin : 4% 20%;
+            .logo{
+                width: 10%;
+
+                img{
+                    width :100px;
+                    margin : 4% 0%;
+                }
+            }
+
+            a {
+                font-size: 1em;
+
             }
         }
 
-        a {
-            font-size: 1em;
 
-        }
+    }
+
+     .aLink{
+         display: block;
+         text-decoration: underline;
+         text-align: center;
     }
 }
 
