--- a/templates/organisms/edit.html.twig
+++ b/templates/organisms/edit.html.twig
@@ -2,12 +2,16 @@
 
 {% block title %}Edit Organisms{% endblock %}
 
+{% block stylesheets %}
+    {{ encore_entry_link_tags('editPartner') }}
+{% endblock %}
+
 {% block body %}
-    <h1>Edit Organisms</h1>
+    <h1 class="editTitle">Modifier Partenaire</h1>
 
     {{ include('organisms/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('organisms_index') }}">back to list</a>
+    <a class="editLink" href="{{ path('organisms_index') }}">Retour à la liste</a>
 
     {{ include('organisms/_delete_form.html.twig') }}
 {% endblock %}
