--- a/templates/organisms/show.html.twig
+++ b/templates/organisms/show.html.twig
@@ -11,33 +11,33 @@
     <main class="partnerPage">
 
 
-        <img title="{{ organism.logo }}" src="{{ organism.logo }}" alt="{{ organism.logo }}">
+        <img title="{{organism.organismName }} {{ organism.organismStatus }}" src="{{ organism.logo }}" alt="{{ organism.organismName }}">
 
-        <p class="status">{{ organism.organismStatus }}</p>
-
-        <h3 >Description</h3>
-
-        <p>{{ organism.description }}</p>
 
         <div class="partnerInfo">
+            <p>{{ organism.description }}</p>
 
-        <p>{{ organism.organismAddress }}</p>
+            <div class="desBlock">
+                <p>{{ organism.organismAddress }}</p>
 
-        <p>{{ organism.organismCity }}</p>
+                <p>{{ organism.organismCity }}</p>
 
-        <p>{{ organism.organismPostcode }}</p>
+                <p>{{ organism.organismPostcode }}</p>
 
-        <p>{{ organism.organismPhone }}</p>
+                <p>{{ organism.organismPhone }}</p>
+            </div>
 
-        <p><a href="{{ organism.organismLink }}">Visiter le site</a></p>
 
         </div>
 
+
+        <p><a class="linkA" href="{{ organism.organismLink }}">Visiter le site</a></p>
+
         <div id="clickLink">
 
-        <a href="{{ path('organisms_index') }}">back to list</a>
+        <a href="{{ path('organisms_index') }}">Retour à la liste</a>
         <br>
-        <a href="{{ path('organisms_edit', {'id': organism.id}) }}">edit</a>
+        <a href="{{ path('organisms_edit', {'id': organism.id}) }}">Modifier</a>
 {#
     {{ include('organisms/_delete_form.html.twig') }}
 #}
